# typewriter

./: .gitignore  TW_extractor.py  TW_model.py  main_DLTPy.ipynb  main_TW.ipynb  main_TW.py  pyproject.toml  requirements.txt
data/paper-dataset/: README.txt  cloner.sh  github_urls.txt  open_source_results_return.json  open_source_training_files.txt  open_source_validation_files.txt
dltpy/input_preparation/: embedder.py
slurm/: clone.sh  complete.sh  extract.sh  train.sh
typewriter/: extraction.py  model.py
typewriter/dltpy/input_preparation/: df_to_vec.py  embedder.py  generate_df.py
typewriter/dltpy/learning/: learn.py
typewriter/dltpy/preprocessing/: nl_preprocessing.py  pipeline.py  test_cloner.py  test_extractor.py  test_nl_preprocessing.py  test_project_filter.py
