[tool.poetry]
name = "typewriter"
version = "0.1.0"
description = "Prob.Inf via TypeWriter"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
GitPython = "^3.1.29"
tqdm = "^4.64.1"
joblib = "^1.2.0"
astor = "^0.8.1"
docstring-parser = "^0.15"
gevent = "^22.10.2"
requests = "^2.28.1"
nltk = "^3.8"
numpy = "^1.23.5"
scikit-learn = "^1.2.0"
pandas = "^1.5.2"
gensim = "^4.2.0"
torch = "^1.13.0"
asttokens = "^2.2.1"
tensorboard = "^2.11.0"
matplotlib = "^3.6.2"
ray = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
